src/objects/LeanData__Merge_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merge Group Members</relationshipLabel>
        <relationshipName>Merge_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merge Group Members</relationshipLabel>
        <relationshipName>Merge_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Job_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Merge Group Members</relationshipLabel>
        <relationshipName>Merge_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>LeanData__Marketing_Lead__c</referenceTo>
        <relationshipLabel>Merge Group Members</relationshipLabel>
        <relationshipName>Merge_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Merge_Group_Id__c</fullName>
        <externalId>true</externalId>
        <label>Merge Group Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Merge_Group_Member_Id__c</fullName>
        <externalId>true</externalId>
        <label>Merge_Group_Member_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merge Group Member</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Contact__c</columns>
        <columns>LeanData__Job_Id__c</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Marketing_Lead__c</columns>
        <columns>LeanData__Merge_Group_Member_Id__c</columns>
        <columns>LeanData__Merge_Group_Id__c</columns>
        <columns>LeanData__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LeanData__Marketing</fullName>
        <columns>NAME</columns>
        <columns>LeanData__Job_Id__c</columns>
        <columns>LeanData__Account__c</columns>
        <columns>LeanData__Contact__c</columns>
        <columns>LeanData__Lead__c</columns>
        <columns>LeanData__Marketing_Lead__c</columns>
        <columns>LeanData__Merge_Group_Member_Id__c</columns>
        <columns>LeanData__Merge_Group_Id__c</columns>
        <columns>LeanData__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeanData__Marketing_Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Marketing</label>
    </listViews>
    <nameField>
        <label>Merge Group Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>